home bar& main setup

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<style>
+   
+    .bg-video { 
+        width: 100%; /* Make the video fill the container width */        
+      } 
+</style>
+
+<div class="container align-items-center">      
+        <video autoplay muted loop class="bg-video">
+            <source src="~/videos/Vaule-1.mp4" type="video/mp4" />
+        </video>   
 </div>
