--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link active" aria-current="page" href="/home">首頁</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/QrtRev">台灣股票</a>
+                            <a class="nav-link" href="/QrtRev/Details">股票季度分析</a>
                         </li>
                     </ul>
                 </div>
