--- a/Views/QrtRev/Details.cshtml
+++ b/Views/QrtRev/Details.cshtml
@@ -1,10 +1,14 @@
 ﻿@model IEnumerable<InvBackend.Models.QrtRevModel>
 
 <head>
-    <link rel="stylesheet" href="~/css/all.min.css" />
-    <link rel="stylesheet" href="~/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/text_selection.css" />
+    @* <link rel="stylesheet" href="~/css/all.min.css" /> *@
+    @* <link rel="stylesheet" href="~/css/bootstrap.min.css" /> *@
+    @* <link rel="stylesheet" href="~/css/text_selection.css" /> *@
     <style>
+        .row {
+            margin-bottom: 10px; 
+        }
+
         .pagination-container {
             display: flex;
             justify-content: center;
@@ -78,76 +82,79 @@
                     </select>
                 </form>
             </div>
-        </div>
-        <table id="dataTable" class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>股票代碼</th>
-                    <th>公司名稱</th>
-                    <th>產業</th>
-                    <th>EPS</th>
-                    <th>營業收入</th>
-                    <th>營業利益</th>
-                    <th>營業外收入及支出</th>
-                    <th>稅後淨利</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr class="table-row">
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Id)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CompanyName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Industry)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Eps)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.OperatingRev)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.OperatingProfit)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NonOperating)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NetIncome)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                        </td>
+        
+            <table id="dataTable" class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>股票代碼</th>
+                        <th>公司名稱</th>
+                        <th>產業</th>
+                        <th>EPS</th>
+                        <th>營業收入</th>
+                        <th>營業利益</th>
+                        <th>營業外收入及支出</th>
+                        <th>稅後淨利</th>
+                        <th>Action</th>
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr class="table-row">
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Id)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CompanyName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Industry)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Eps)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.OperatingRev)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.OperatingProfit)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NonOperating)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NetIncome)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
 
-        <!-- Pagination Controls -->
-        <div class="pagination-container">
-            <button id="prevButton" class="btn btn-primary pagination-button">
-                <i class="fas fa-chevron-left"></i> 上一頁
-            </button>
-            <div class="page-info">
-                <span id="currentPage">1</span> / <span id="totalPages"></span>
+            <!-- Pagination Controls -->
+            <div class="pagination-container">
+                <button id="prevButton" class="btn btn-primary pagination-button">
+                    <i class="fas fa-chevron-left"></i> 上一頁
+                </button>
+                <div class="page-info">
+                    <span id="currentPage">1</span> / <span id="totalPages"></span>
+                </div>
+                <button id="nextButton" class="btn btn-primary pagination-button">
+                    下一頁 <i class="fas fa-chevron-right"></i>
+                </button>
             </div>
-            <button id="nextButton" class="btn btn-primary pagination-button">
-                下一頁 <i class="fas fa-chevron-right"></i>
-            </button>
-        </div>
+         </div>
     </div>
 </div>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-<script src="~/js/bootstrap.bundle.min.js"></script>
-<script src="~/js/jquery-3-7-1-min.js"></script>
+@* <script src="~/js/bootstrap.bundle.min.js"></script> *@
+@* <script src="~/js/jquery-3-7-1-min.js"></script> *@
 
 <script src="~/js/graphChart.js"></script>
 <script src="~/js/pieChartMore.js"></script>
@@ -186,6 +193,8 @@
             // Initialize charts on page load
             pieChart();
             barChart();
+
+            console.log(barElts);
 
             // Set up industry filter event handler
             $("#industrySelect").change(function() {
