--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="~/InvBackend.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/all.min.css" />
     <link rel="stylesheet" href="~/css/text_selection.css" />
+   
+
 
 </head>
 <body>
@@ -30,13 +32,14 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    @* <div class="container"> *@
+    <div>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted ">
         <div class="container">
             &copy; 2025 - Lorenzo - <a href="https://github.com/Lorenzoforthis/InvWithJava_backend">Go to Lorenzo's Github</a>
         </div>
